[gd_scene load_steps=6 format=3 uid="uid://g2fdnkg2usxx"]

[ext_resource type="Script" path="res://Master_Project/Server/Scripts/player_s_3d.gd" id="1_do8up"]
[ext_resource type="PackedScene" uid="uid://ddq7sfnhc783" path="res://Master_Project/assets/Characters/Scenes/character_soldier_01.tscn" id="1_rlkq1"]
[ext_resource type="PackedScene" uid="uid://bc7op77skw5kl" path="res://Master_Project/Server/Scenes/reflect_area_3d.tscn" id="3_aht7q"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_l7ibu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_l4461"]
size = Vector3(0.497925, 1, 0.373718)

[node name="Player_S_3D" type="CharacterBody3D"]
script = ExtResource("1_do8up")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_l7ibu")

[node name="Ghost_Skin_3D" type="Node3D" parent="." groups=["skin"]]
unique_name_in_owner = true

[node name="Character_Soldier_01" parent="Ghost_Skin_3D" instance=ExtResource("1_rlkq1")]

[node name="Reflect_Area3D" parent="Ghost_Skin_3D" instance=ExtResource("3_aht7q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)

[node name="Hurtbox_Area3D" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox_Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0010376, 1, 0.0175476)
shape = SubResource("BoxShape3D_l4461")

[connection signal="area_entered" from="Hurtbox_Area3D" to="." method="_on_hurtbox_area_3d_area_entered"]
